# wasmer-ocaml

./: .gitignore  .ocamlformat  META  Makefile  README.md  dune-project  wasmer.opam
examples/: dune  hello.ml  instance.ml  rust.ml
examples/rust-wasm/: Cargo.toml
examples/rust-wasm/src/: lib.rs
lib/: dune  wasmer.ml  wasmer.mli  wasmerBindings.c
src/bindings/: dune  util.ml  util.mli  wasmerBindings.c  wasmerBindings.h  wasmerBindings.ml  wasmerBindings.mli  wasmer_ocaml.ml
src/lib/: util.ml  util.mli  wasmer.ml  wasmer.mli  wasmerBindings.ml  wasmerBindings.mli
src/test/hello/: hello.ml
src/test/instance/: instance.ml
test/hello/: dune  hello.ml  test_hello.ml
test/instance/: dune  instance.ml
