opam-version: "2.0"
authors: ["rajdakin"]
maintainer: ["engineering@wasmer.io"]
license: "MIT"
homepage: "https://github.com/wasmerio/wasmer-ocaml"
bug-reports: "https://github.com/wasmerio/wasmer-ocaml/issues"
dev-repo: "git+https://github.com/wasmerio/wasmer-ocaml.git"
tags: ["org:wasmer"]

synopsis: "OCaml bindings for Wasmer"
description: "The official Wasmer bindings for OCaml"

depends: [
  "ocaml" {>= "4.14.1"}
  "dune" {>= "2.0"}
  "ctypes"
  "ctypes-foreign"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
